--- a/app/src/main/res/layout/activity_tween_anim.xml
+++ b/app/src/main/res/layout/activity_tween_anim.xml
@@ -1,12 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.qwm.androidreview.AnimoDemo.TweenAnimActivity">
 
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:onClick="testTranslate"
+            android:id="@+id/btn_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="位移动画" />
+        <Button
+            android:onClick="testScale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="缩放动画" />
+        <Button
+            android:onClick="testRotate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="旋转动画" />
+        <Button
+            android:onClick="testAlpha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="透明度动画" />
+        <Button
+            android:onClick="testAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="综合" />
+    </LinearLayout>
+
+    <ImageView
+        android:background="@mipmap/sjtp1"
+        android:id="@+id/iv_image1"
+        android:layout_width="300dp"
+        android:layout_height="300dp" />
+
+</LinearLayout>
