--- a/app/src/main/res/layout/activity_frame_anim.xml
+++ b/app/src/main/res/layout/activity_frame_anim.xml
@@ -8,7 +8,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.qwm.androidreview.AnimoDemo.FrameAnimActivity">
+    tools:context="com.qwm.androidreview.animodemo.FrameAnimActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
