--- a/app/src/main/res/layout/activity_tween_anim.xml
+++ b/app/src/main/res/layout/activity_tween_anim.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.qwm.androidreview.AnimoDemo.TweenAnimActivity">
+    tools:context="com.qwm.androidreview.animodemo.TweenAnimActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
