--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,4 +6,21 @@
         <attr name="civ_border_overlay" format="boolean" />
         <attr name="civ_fill_color" format="color" />
     </declare-styleable>
+
+    <!-- 矩形 -->
+    <declare-styleable name="RectIndicator">
+        <attr name="item_count1" format="integer"/>
+        <attr name="indicator_bgcolor" format="color" />
+        <attr name="indicator_color" format="color" />
+        <attr name="indicator_title_color" format="color" />
+        <attr name="indicator_width" format="dimension" />
+        <attr name="indicator_height" format="dimension" />
+        <attr name="title_size" format="dimension" />
+    </declare-styleable>
+
+
+    <declare-styleable name="nnn">
+        <attr name="xxxxxx" format="integer"/>
+    </declare-styleable>
+
 </resources>
