--- a/app/src/main/res/layout/activity_normal_receiver.xml
+++ b/app/src/main/res/layout/activity_normal_receiver.xml
@@ -3,35 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.qwm.androidreview.receiverdemo.ReceiverActivity">
+    android:orientation="vertical"
+    tools:context="com.qwm.androidreview.receiverdemo.NormalReceiverActivity">
 
     <Button
-        android:onClick="testNormal"
-        android:text="普通广播测试"
+        android:text="测试一哈自己定义的广播1"
+        android:onClick="onReceiverTest1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <Button
-        android:onClick="testSystem"
-        android:text="系统广播测试"
+        android:text="测试一哈自己定义的广播2"
+        android:onClick="onReceiverTest2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:onClick="testOrder"
-        android:text="有序广播测试"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView
+        android:overScrollMode="always"
+        android:id="@+id/receiver_tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
-    <Button
-        android:onClick="testLocal"
-        android:text="本地广播测试"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
