--- a/app/src/main/res/layout/activity_system_receiver.xml
+++ b/app/src/main/res/layout/activity_system_receiver.xml
@@ -8,5 +8,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".receiverdemo.systemreceiver.SystemReceiverActivity">
-
+<Button
+    android:text="huoqu"
+    android:onClick="picTest"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
 </RelativeLayout>
