--- a/app/src/main/res/layout/activity_system_receiver.xml
+++ b/app/src/main/res/layout/activity_system_receiver.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,10 +7,19 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".receiverdemo.systemreceiver.SystemReceiverActivity">
-<Button
-    android:text="huoqu"
+
+    <Button
+    android:text="拍照测试"
     android:onClick="picTest"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
-</RelativeLayout>
+
+
+    <Button
+        android:text="视频测试"
+        android:onClick="videoTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</LinearLayout>
