--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,8 @@
     <color name="color_808855f0">#808855f0</color>
     <color name="color_90b3b3b3">#90b3b3b3</color>
     <color name="white">#ffffff</color>
+
+    <color name="green">#00FF00</color>
+    <color name="gray_999999">#999999</color>
+    <color name="red">#FF0000</color>
 </resources>
