--- a/app/src/main/res/layout/activity_order_receiver.xml
+++ b/app/src/main/res/layout/activity_order_receiver.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.qwm.androidreview.receiverdemo.OrderReceiverActivity">
+    tools:context=".receiverdemo.orderreceiver.OrderReceiverActivity">
 
     <Button
         android:text="测试一哈有序的广播"
