--- a/app/src/main/res/layout/activity_design_suport_demo.xml
+++ b/app/src/main/res/layout/activity_design_suport_demo.xml
@@ -12,6 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <com.qwm.androidreview.view.MyGridView
+            android:verticalSpacing="5dp"
+            android:horizontalSpacing="5dp"
             android:numColumns="3"
             android:id="@+id/mgv_content"
             android:layout_width="match_parent"
