--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#4F3B70</color>
+    <color name="colorPrimaryDark">#4F3B70</color>
+    <color name="colorAccent">#8923ff</color>
+    <color name="base_bg_color">#ffffff</color>
+
     <color name="color_808855f0">#808855f0</color>
     <color name="color_90b3b3b3">#90b3b3b3</color>
     <color name="white">#ffffff</color>
